compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/withErrorTypes.kt
interface T {
    <!CONFLICTING_JVM_DECLARATIONS!>konst x: <!UNRESOLVED_REFERENCE!>ErrorType<!><!>
    <!CONFLICTING_JVM_DECLARATIONS!>fun getX(): <!UNRESOLVED_REFERENCE!>ErrorType1<!><!>
}